Add Knight mobility logic, Update README.md and JDK