@@ -1,5 +1,11 @@
 # Chess Game
 
 Developing a chess game using Java Swing. </br>
-Java Version: 17.0.12 </br>
-Javac Version: 17.0.12
+Java Version: 24.01.1 </br>
+Javac Version: 24.01.1 </br>
+
+## Add Run/Debug Configuration
+Name: Run Chess </br>
+JDK: java 24 </br>
+VM Option: --enable-native-access=ALL-UNNAMED </br>
+Main class: main.Main </br>
